Meta Tags included
SEO optimaziation, including meta tags

--- a/index.html
+++ b/index.html
@@ -2,8 +2,15 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="title" content="Riesenia UX Design">
+    <meta name="description" content="Riesenia UX Design">
+    <meta name="keywords" content="riesenia, riesenia ux design, ux design, ux design audit">
+    <meta name="robots" content="noindex, follow">
+    <meta name="language" content="English">
+    <meta name="author" content="Dominik Dzurek">
+    
     <title>Document</title>
     
     <link rel="stylesheet/scss" type="text/css" href="style.scss">
