--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta name="language" content="English">
     <meta name="author" content="Dominik Dzurek">
     
-    <title>Document</title>
+    <title>Riešenia - UX Design</title>
     
     <link rel="stylesheet/scss" type="text/css" href="style.scss">
     <link rel="stylesheet" href="style.css">
