--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     
     <title>Riešenia - UX Design</title>
     
+    <link rel="icon" type="image/x-icon" href="./favicon.ico">
     <link rel="stylesheet/scss" type="text/css" href="style.scss">
     <link rel="stylesheet" href="style.css">
 </head>
